# FHE_NEW

./: Anchor.toml  package.json  tsconfig.json
frontend/: .env.example  README.md  craco.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/public/: index.html
frontend/src/: App.tsx  react-app-env.d.ts
frontend/src/components/: PrivacyVault.tsx
frontend/src/utils/: anchor-setup.ts
programs/privacy_vault/: Cargo.toml
programs/privacy_vault/src/: error.rs  lib.rs  state.rs
programs/privacy_vault/src/instructions/: compressed_deposit.rs  compressed_withdraw.rs  deposit.rs  initialize_merkle_tree.rs  initialize_vault.rs  initialize_vault_config.rs  mod.rs  update_vault_config.rs  withdraw.rs
tests/: privacy_vault.ts
