[package]
name = "privacy_vault"
version = "0.1.0"
description = "Privacy-preserving vault with FHE support and relayer rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
account-compression = { version = "2.0.0", features = ["cpi"] }
light-hasher = "3.1.0"
